Change List.of to Arrays.asList, Java 1.8